fixed issue of title overflow in dropdown box

--- a/public/stylesheets/marketing.css
+++ b/public/stylesheets/marketing.css
@@ -216,7 +216,7 @@ body {
     
     text-overflow: ellipsis;
     display:inline-block;
-    white-space: nowrap;
+    
     width:100%;
     padding-bottom: 0px;
     letter-spacing: normal;
